2012-11-01  senarvi  <senarvi@cis.hut.fi>

	* src/TokenPassSearch.cc (TokenPassSearch::reset_search):
	m_recent_word_graph_info is indexed by word ID, so size has to be
	m_word_repository.size().
	(TokenPassSearch::create_word_repository): Update m_word_repository size if
	a word is added to vocabulary. 
	(TokenPassSearch::get_lm_bigram_lookahead): m_word_repository.size() is the
	number of different word IDs, not m_lexicon.words().
	(TokenPassSearch::get_lm_trigram_lookahead): m_word_repository.size() is the
	number of different word IDs, not m_lexicon.words().

2012-10-25  senarvi  <senarvi@cis.hut.fi>

	* src/LMHistory.cc (LMHistory::rend): A NULL value represents the beginning
	of an LMHistory, or the end of reverse iteration.
	(LMHistory::ConstReverseIterator::ConstReverseIterator): Accepts NULL
	parameter (end iterator). 
	* src/LMHistory.hh (LMHistory::ConstReverseIterator): Compiles also without
	multiword support. 
	(LMHistory::ConstReverseIterator::operator ==): For iterating until end
	iterator is encountered.
	* src/TokenPassSearch.cc (TokenPassSearch::is_similar_lm_history): Use
	LMHistory::ConstReverseIterator.
	(TokenPassSearch::compute_lm_hist_hash_code):  Use
	LMHistory::ConstReverseIterator.
	(TokenPassSearch::get_lm_lookahead_score): Use
	LMHistory::ConstReverseIterator.

2012-10-01  senarvi  <senarvi@cis.hut.fi>

	* src/LMHistory.cc (LMHistory::rbegin): Returns a reverse iterator pointing
	to the last word or multiword component in the LMHistory.
	* src/LMHistory.hh (LMHistory.Word): Uses ID structure to store dictionary,
	language model, and lookahead language model IDs of a word.
	(LMHistory.Word.component): Returns a reference to an ID structure.
	(LMHistory.ConstReverseIterator): Iterates LMHistory words or multiword
	components in reverse order.
	* src/TokenPassSearch.cc (TokenPassSearch::split_and_compute_ngram_score):
	Uses LMHistory::Word::ConstReverseIterator. 
 
2012-09-25  senarvi  <senarvi@cis.hut.fi>
